# VN_Rust

./: .gitignore  Cargo.toml  README.md  SCRIPT.md
assets/: project.toml
assets/scripts/: 001.json  001.story  001.vn  002.json  002.vn  schema.json
runtime/: Cargo.toml
runtime/src/: main.rs  screen_manager.rs
runtime/src/components/: button.rs
runtime/src/providers/: mod.rs  raylib_context.rs  resource.rs
runtime/src/screens/: main_menu.rs  mod.rs  playing_screen.rs  start_screen.rs
script_compiler/: Cargo.toml  README.md
script_compiler/src/: main.rs
test_compiler/: Cargo.toml
test_compiler/src/: main.rs
vn_core/: Cargo.toml
vn_core/src/: lib.rs  parser.rs
vn_core/src/components/: button.rs  mod.rs  switch.rs
vn_core/src/providers/: mod.rs  resource.rs  screen.rs  story.rs
vn_core/src/runtime/providers/: mod.rs  resource_provider.rs  screen_provider.rs
vn_core/src/runtime/types/: context.rs  mod.rs  screen.rs
vn_core/src/script/: compiler.rs  lexer.rs  mod.rs  parser.rs  provider.rs
vn_core/src/script/types/: instructions.rs  mod.rs  parser.rs
vn_core/src/types/: context.rs  instructions.rs  mod.rs  reader.rs  screen.rs
