[package]
name = "script_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
vn_core = { path = "../vn_core" }
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde_json = "1.0.149"
schemars = "1.2.0"
toml = "0.9"
regex = "1.12.2"
